# testcode

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  SMART_AZURE.md  localsetup.md  requirements.txt  sonar-project.properties
.github/workflows/: container-build.yaml  create_tf_backend.yml  delete-api-spec.yml  deploy.yaml  force-unlock.yaml  mobcontr-deploy-agent.yaml  mobcontr-deploy-elsa-mcp.yml  mobcontr-deploy-email-mcp.yml  mobcontr-deploy-ui.yaml  pr-plan.yaml  publish-api-spec.yml  security-checks.yaml  sonarqube.yml  syntax-checks.yaml  validate-and-deploy.yaml
.github/workflows/scripts/: install-git.sh  install-pre-commit.sh  install-python.sh  install-terraform.sh
agents/mobile-contract-agent/: .agenticai.yaml  .gitignore  Dockerfile  README.md  WORKFLOW.md  patch_observability.py  pyproject.toml
agents/mobile-contract-agent/cli/: __init__.py  __main__.py  main.py
agents/mobile-contract-agent/cli/commands/: docker.py  iac.py  infra.py
agents/mobile-contract-agent/configs/: config.yaml
agents/mobile-contract-agent/docs/: README.md
agents/mobile-contract-agent/docs/api-reference/: README.md
agents/mobile-contract-agent/docs/architecture/: README.md
agents/mobile-contract-agent/docs/contributing/: README.md
agents/mobile-contract-agent/docs/examples/: README.md
agents/mobile-contract-agent/docs/guides/: README.md  getting-started.md
agents/mobile-contract-agent/src/: __init__.py  __main__.py  a2a_server.py  file_upload_api.py  job_status_updater.py
agents/mobile-contract-agent/src/tools/: __init__.py  databricks_loader.py  generate_reports_tool.py  invoice_processor.py  phone_normalizer.py  table_utils.py
configuration/: README.md  applicationinsights.tf  containerapp_agent.tf  containerapp_email_mcp_app.tf  containerapp_environment.tf  containerapp_mcp_elsa.tf  containerapp_storage.tf  containerapp_ui_app.tf  containerregistry.tf  dev.terraform.tfvars  email_communication.tf  keyvault.tf  loganalyticsws.tf  main.tf  network_nsg.tf  network_vnet.tf  openaiservice.tf  outputs.tf  poc.terraform.tfvars  sql.tf  terraform.tf  variables.tf
configuration/modules/azure-sql/: README.md  main.tf  outputs.tf  variables.tf
mcps/elsa-mcp/: .env.example  .gitignore  COMPREHENSIVE_DOCUMENTATION.md  Dockerfile  README.md  pyproject.toml
mcps/elsa-mcp/cli/: __init__.py  __main__.py  main.py
mcps/elsa-mcp/cli/commands/: __init__.py  docker.py  iac.py
mcps/elsa-mcp/cli/utils/: azure.py
mcps/elsa-mcp/docs/: CLI_REFERENCE.md  README.md
mcps/elsa-mcp/docs/architecture/: README.md
mcps/elsa-mcp/docs/contributing/: README.md
mcps/elsa-mcp/docs/guides/: deployment.md  development.md  quick-start.md
mcps/elsa-mcp/scripts/: build-mcp-local.ps1  build-mcp-local.sh
mcps/elsa-mcp/src/: __init__.py  auth.py  config.py  main.py
mcps/elsa-mcp/src/services/: __init__.py  auth_service.py  databricks_service.py  hello_world_service.py  telemetry_service.py
mcps/elsa-mcp/tests/: __init__.py  test_hello_world_service.py  test_server.py
mcps/email-mcp/: .env.example  Dockerfile  README.md  pyproject.toml
mcps/email-mcp/cli/: __init__.py  __main__.py  main.py
mcps/email-mcp/cli/commands/: docker.py  iac.py
mcps/email-mcp/cli/utils/: __init__.py
mcps/email-mcp/docs/api-reference/: README.md
mcps/email-mcp/docs/architecture/: README.md
mcps/email-mcp/docs/examples/: README.md
mcps/email-mcp/docs/guides/: README.md  deployment.md  development.md  quick-start.md
mcps/email-mcp/scripts/: build-mcp-azure.ps1  build-mcp-local.ps1
mcps/email-mcp/src/: __init__.py  config.py  main.py
mcps/email-mcp/src/services/: __init__.py  auth_service.py  email_service.py  telemetry_service.py
mcps/email-mcp/tests/: __init__.py  conftest.py  test_hello_world_service.py  test_server.py
scripts/: Original_prepare_azure_subscription.sh  Original_vars.env  prepare_azure_subscription copy.sh  vars.env
scripts/scripts_AG1/: prepare_azure_afac.sh  vars.env
ui/: .eslintrc.json  .prettierrc  CHANGELOG.md  Dockerfile  README.md  WORKFLOW_UI_IMPLEMENTATION.md  bun.lockb  components.json  docker-compose.yaml  next.config.ts  package.json
ui/src/a2a/: README.md  client.ts  schema.ts  state.ts
ui/src/a2a/state/agent/: AgentState.ts  agentStateContext.tsx
ui/src/a2a/state/app/: AppState.ts  appStateContext.tsx
ui/src/a2a/state/host/: HostState.ts  hostStateContext.tsx
ui/src/a2a/state/settings/: SettingsState.ts  settingsStateContext.tsx
ui/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ui/src/app/api/health/: route.ts
ui/src/app/login/: page.tsx
ui/src/app/pages/: AgentListPage.tsx  ConversationListPage.tsx  WorkflowPage.tsx
ui/src/components/: App.tsx  ClientOnly.tsx  ThemeToggle.tsx
ui/src/components/auth/: LoginButton.tsx  LogoutButton.tsx  UserProfile.tsx  index.ts
ui/src/components/charts/: MetricsDistributionChart.tsx  PhaseTimingChart.tsx
ui/src/components/chat/: ArtifactDisplay.tsx  ChatContainer.tsx  ChatInput.tsx  ChatMessageBubble.tsx  JaegerTraceView.tsx  MessagesList.tsx  PartsDisplay.tsx  TraceGraph.module.css  TraceGraph.tsx  TraceSidebar.tsx  TraceTestComponent.tsx  TraceTreeBuilder.tsx  TypingIndicator.tsx  index.ts
ui/src/components/common/: CodeBlock.tsx  DatabricksConnection.tsx  ErrorBoundary.tsx  ExportMarkdownButton.tsx  ExportTableButton.tsx  FileUpload.tsx  MarkdownRenderer.tsx
ui/src/components/layout/: Header.tsx  TabContent.tsx  index.ts
ui/src/contexts/: ThemeContext.tsx
ui/src/hooks/: index.ts  useAppState.ts  useAuth.ts  useChat.ts  useLocalStorage.ts  useTrace.ts
ui/src/lib/: env.ts  error-handler.ts  markdown-export.ts  signedUrlUpload.ts  table-export.ts  uploadFileToAgent.ts
ui/src/lib/auth/: msalConfig.ts
ui/src/types/: chat.ts  index.ts
